--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,29 @@
 server.port = 9000
 
 # h2-database
-spring.datasource.url = jdbc:h2:~/project/wolferspring/tmp/h2data;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username = sa
-spring.datasource.password =
+#spring.datasource.url = jdbc:h2:~/project/wolferspring/tmp/h2data;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username = sa
+#spring.datasource.password =
+
+# mysql
+spring.datasource.url=jdbc:mysql://localhost/wolferx_test
+spring.datasource.username=wolferx
+spring.datasource.password=wolferx
+# no need to specify the driver-class-name, since Spring boot can deduce it for most databases from the url
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Number of ms to wait before throwing an exception if no connection is available.
+#spring.datasource.max-wait=10000
+
+# Maximum number of active connections that can be allocated from this pool at the same time.
+#spring.datasource.max-active=50
+
+# Validate the connection before borrowing it from the pool.
+#spring.datasource.test-on-borrow=true
+
 spring.jpa.show-sql = true
 spring.jpa.database = MYSQL
-
+# this will alter table, so don't turn it on, unless you know exactly what you're doing
+#spring.jpa.hibernate.ddl-auto=update
 #env-dev, auto drop and create at the beginning, don't use it on production
 #spring.jpa.hibernate.ddl-auto = create-drop
