--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("mysql:mysql-connector-java")
     compile("com.alibaba:fastjson:1.2.8")
+    compile("com.google.guava:guava:19.0")
     runtime("com.h2database:h2")
 
     testCompile("junit:junit")
