[DAO] add post_body to post mapper

--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'application'
 apply plugin: 'spring-boot'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-applicationDefaultJvmArgs = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"]
 
 jar {
     baseName = 'wolferspring'
