--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # server
 server.port = 9010
+security.enable-csrf = false
 
 # h2-database
 #spring.datasource.url = jdbc:h2:~/project/wolferspring/tmp/h2data;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
