[main] add jwt dependency

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile("org.jdbi:jdbi:2.72")
     compile("mysql:mysql-connector-java")
     compile("com.alibaba:fastjson:1.2.8")
+    compile("com.auth0:java-jwt:2.1.0")
     compile("com.google.guava:guava:19.0")
     runtime("com.h2database:h2")
 
