--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 # server
 server.port = 9010
+security.basic.enabled = false
+endpoints.shutdown.enabled = true
+keystore.file = src/main/resources/private/keystorejks
+keystore.pass = password
+backend.admin.username = backend_admin
+backend.admin.password = remember_to_change_me_by_external_property_on_deploy
+backend.admin.role = BACKEND_ADMIN
 
 # h2-database
 #spring.datasource.url = jdbc:h2:~/project/wolferspring/tmp/h2data;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
