[auth] complete jwt auth flow

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     // database
     compile("org.jdbi:jdbi:2.72")
     compile("mysql:mysql-connector-java")
-    runtime("com.h2database:h2")
+    //runtime("com.h2database:h2")
 
     // cache
     compile("net.sf.ehcache:ehcache-core:2.6.9") {
@@ -70,9 +70,9 @@ dependencies {
     }
 
     // utils
-    compile("com.alibaba:fastjson:1.2.8")
     compile("com.auth0:java-jwt:2.1.0")
     compile("com.google.guava:guava:19.0")
+    compile("com.alibaba:fastjson:1.2.8")
 
     /*
     compile 'commons-codec:commons-codec:1.4'
@@ -84,7 +84,7 @@ dependencies {
 
     compile 'org.apache.httpcomponents:httpclient:4.3.4'
     compile 'org.apache.httpcomponents:httpcore:4.0.1'
-````*/
+    */
 
     // test
     testCompile 'org.springframework.boot:spring-boot-starter-test'
