--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port = 9010
 endpoints.shutdown.enabled = true
 keystore.file = src/main/resources/private/keystorejks
 keystore.pass = password
-backend.admin.username = backend_admin
-backend.admin.password = remember_to_change_me_by_external_property_on_deploy
-backend.admin.role = BACKEND_ADMIN
+monitor.admin.username = backend_admin
+monitor.admin.password = remember_to_change_me_by_external_property_on_deploy
+monitor.admin.role = ADMIN
 
 # security
 security.basic.enabled = false
