--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'org.springframework:springloaded:1.2.6.RELEASE'
     }
 }
 
@@ -27,6 +28,13 @@ targetCompatibility = 1.8
 
 compileJava {
     targetCompatibility = 1.8
+}
+
+idea {
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/main/")
+    }
 }
 
 applicationDefaultJvmArgs = [
